--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lista de Tarefas</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: rgb(54, 57, 60);"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
