added background color

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Tarefas</title>
   </head>
-  <body>
-    <div id="root" style="background-color: rgb(54, 57, 60);"></div>
+  <body style="background-color: rgb(54, 57, 60);">
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
